--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@babel/core": "7.1.0",
+    "@material-ui/core": "^4.8.2",
     "@svgr/webpack": "2.4.1",
     "axios": "^0.18.1",
     "babel-core": "7.0.0-bridge.0",
@@ -56,6 +57,7 @@
     "sass-loader": "7.1.0",
     "style-loader": "0.23.0",
     "terser-webpack-plugin": "1.1.0",
+    "typeface-roboto": "0.0.75",
     "url-loader": "1.1.1",
     "webpack": "4.19.1",
     "webpack-dev-server": "3.1.9",
